scss/custom-styles/_cards.scss
// 4. Card
// ---------

.card {
  min-width: auto;
  flex-grow: 0;
  font-size: $paragraph-font-size;

  border: $hr-border;
  transition: box-shadow $global-transition-medium $global-transition-timing;
  background-color: $color-bg-1;
  overflow: clip;
  color: $color-text-1;

  .card-anchor {
    color: inherit;
    text-decoration: none !important;
    display: flex;
    flex-direction: column;
    padding: 0 !important;

    @include foundation-palette;
  }

  &.overflow-auto {
    overflow: auto;
  }

  &.overflow-hidden {
    overflow: hidden;
  }

  &.overflow-initial {
    overflow: initial;
  }

  &.muted {
    opacity: 0.5;
  }

  &:not(.static) {
    &:hover {
      cursor: pointer;
      box-shadow: $global-drop-shadow;
      transition: box-shadow $global-transition-short $global-transition-timing;
    }
  }

  input,
  textarea,
  select {
    font-size: $input-font-size;
  }

  &.accordion {
    background: $card-background;
  }
}

.card-header {
  position: relative;
  width: 100%;
  min-width: 0;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  flex: 1;
  padding: $button-padding;
  line-height: $paragraph-lineheight;

  h1 {
    margin-bottom: 0;
    word-break: break-word;
  }

  &:not(.align-justify) {
    justify-content: flex-start;
  }

  &:is(.flex-dir-row) {
    flex-direction: row;
    align-items: center;
  }

  &.no-padding {
    padding: 0;
    padding-left: nth($button-padding, 2);
  }
}

.post-card-anchor {
  width: 100%;
}

.card-title {
  display: flex;
  align-items: center;
  font-size: 1rem;
  line-height: $header-lineheight;
  font-weight: $global-weight-normal;
  margin: 0;

  &.small {
    font-size: 0.875rem;
  }

  .fa {
    font-size: 0.75em;
    margin-right: 0.5em;
  }
}

.card-section,
.card-divider {
  padding: map-get($spacing-scale, 3);
  display: flex;
  flex-direction: column;

  &.nested {
    border-top: none;
    margin-top: -1rem;

    .card-section.no-padding.flex-dir-row {
      border-top: $hr-border;
      margin-top: -1.375rem;
      padding-top: 0.75rem;

      .page-title {
        font-size: 1rem;
        font-weight: 400;
      }
    }
  }

  &-negative {
    margin-inline: -#{map-get($spacing-scale, 3)};
  }

  &.flex-dir-row {
    flex-direction: row;
  }

  &.flex-dir-row-reverse {
    flex-direction: row-reverse;
  }

  &.flex-dir-column {
    flex-direction: column;
  }

  &.small {
    line-height: 1.25rem;
  }

  & > a {
    text-decoration: none;

    &::only-child:hover {
      background: $color-bg-2;
    }
  }

  &.no-padding {
    & > [type="text"],
    & > [type="password"],
    & > [type="date"],
    & > [type="datetime"],
    & > [type="datetime-local"],
    & > [type="month"],
    & > [type="week"],
    & > [type="email"],
    & > [type="number"],
    & > [type="search"],
    & > [type="tel"],
    & > [type="time"],
    & > [type="url"],
    & > [type="color"],
    & > textarea,
    & > select,
    & > .input {
      border: none;
      resize: none;
    }

    & > a {
      box-sizing: border-box;
    }
  }

  @each $size-label, $size in $user-card-sizes {
    &.#{$size-label} {
      &:last-child {
        height: $size;
      }
    }
  }
}

.card-divider {
  border-top: $hr-border;

  &.accordion-content {
    border-top: $hr-border !important;
  }

  &:first-child {
    border: none;
  }
}

.box-shadow {
  box-shadow: $global-drop-shadow;
}
.box-shadow-large {
  box-shadow: $global-drop-shadow-large;
}

.page-title {
  padding-top: 0.5rem;

  a {
    text-decoration: none !important;
    font-weight: 400;
  }
}

.page-content {
  padding: 1rem 0;
}

// 5. Spaces Card
// ---------

.space-title {
  line-height: 1.3;

  @extend .card-title;

  display: flex;
  margin: auto 0;
  padding: 0.25rem 0.5rem;
  z-index: 1;
  color: $color-text-0;
  background: color-mix-opacity(#{$color-bg-0}, 55%, 45%);
  -webkit-box-orient: vertical;
  backdrop-filter: blur(20px) saturate(200%);
  max-width: 80% !important;
  margin-top: 7%;
  position: absolute;
  border-radius: 0 $global-radius-small $global-radius-small 0;

  .fa {
    font-size: 0.75em;
    margin-right: 0.5em;
    align-self: center;
  }

  .large & {
    @include header-style("h2", "font-size");

    white-space: normal;
    max-height: 3em;

    @include breakpoint(large) {
      max-height: initial;
    }

    & > * {
      line-clamp: 2;
      -webkit-line-clamp: 2;
      -webkit-box-orient: vertical;
      hyphens: auto;
      overflow: hidden;
      padding: 2px;
      margin: -2px;
    }
  }
}

.wide {
  width: 100%;
  max-width: 100%;
  padding: 0;

  .large {
    border-radius: 0;
    margin: 0;
  }

  @media (width >= 1366px) {
    .space-title {
      left: calc(50vw - ((1080px - 20px) / 2));
      border-radius: $global-radius-small;
    }
  }
}
/* ... */

